@@ -64,5 +64,6 @@ public class AHSWebApp extends WebApp implements YarnWebParams {
     route(
       pajoin("/logs", NM_NODENAME, CONTAINER_ID, ENTITY_STRING, APP_OWNER,
         CONTAINER_LOG_TYPE), AHSController.class, "logs");
+    route("/errors-and-warnings", AHSController.class, "errorsAndWarnings");
   }
 }
